@@ -6689,3 +6689,340 @@ PyTypeObject NextTrigType = {
     0,                                              /* tp_alloc */
     NextTrig_new,                                     /* tp_new */
 };
+
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    PyObject *value;
+    Stream *value_stream;
+    MYFLT current_value;
+    int modebuffer[3]; // need at least 2 slots for mul & add 
+} TrigVal;
+
+static void
+TrigVal_generate_i(TrigVal *self) {
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT val = PyFloat_AS_DOUBLE(self->value);
+    
+    for (i=0; i<self->bufsize; i++) {
+        if (in[i] == 1)
+            self->current_value = val;
+        
+        self->data[i] = self->current_value;
+    }
+}
+
+static void
+TrigVal_generate_a(TrigVal *self) {
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT *val = Stream_getData((Stream *)self->value_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        if (in[i] == 1)
+            self->current_value = val[i];
+        
+        self->data[i] = self->current_value;
+    }
+}
+
+static void TrigVal_postprocessing_ii(TrigVal *self) { POST_PROCESSING_II };
+static void TrigVal_postprocessing_ai(TrigVal *self) { POST_PROCESSING_AI };
+static void TrigVal_postprocessing_ia(TrigVal *self) { POST_PROCESSING_IA };
+static void TrigVal_postprocessing_aa(TrigVal *self) { POST_PROCESSING_AA };
+static void TrigVal_postprocessing_ireva(TrigVal *self) { POST_PROCESSING_IREVA };
+static void TrigVal_postprocessing_areva(TrigVal *self) { POST_PROCESSING_AREVA };
+static void TrigVal_postprocessing_revai(TrigVal *self) { POST_PROCESSING_REVAI };
+static void TrigVal_postprocessing_revaa(TrigVal *self) { POST_PROCESSING_REVAA };
+static void TrigVal_postprocessing_revareva(TrigVal *self) { POST_PROCESSING_REVAREVA };
+
+static void
+TrigVal_setProcMode(TrigVal *self)
+{
+    int procmode, muladdmode;
+    procmode = self->modebuffer[2];
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+	switch (procmode) {
+        case 0:    
+            self->proc_func_ptr = TrigVal_generate_i;
+            break;
+        case 1:    
+            self->proc_func_ptr = TrigVal_generate_a;
+            break;
+    } 
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = TrigVal_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = TrigVal_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = TrigVal_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = TrigVal_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = TrigVal_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = TrigVal_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = TrigVal_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = TrigVal_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = TrigVal_postprocessing_revareva;
+            break;
+    }  
+}
+
+static void
+TrigVal_compute_next_data_frame(TrigVal *self)
+{
+    (*self->proc_func_ptr)(self); 
+    (*self->muladd_func_ptr)(self);
+}
+
+static int
+TrigVal_traverse(TrigVal *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    Py_VISIT(self->value);    
+    Py_VISIT(self->value_stream);    
+    return 0;
+}
+
+static int 
+TrigVal_clear(TrigVal *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    Py_CLEAR(self->value);    
+    Py_CLEAR(self->value_stream);    
+    return 0;
+}
+
+static void
+TrigVal_dealloc(TrigVal* self)
+{
+    pyo_DEALLOC
+    TrigVal_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject *
+TrigVal_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    PyObject *inputtmp, *input_streamtmp, *valuetmp=NULL, *multmp=NULL, *addtmp=NULL;
+    TrigVal *self;
+    self = (TrigVal *)type->tp_alloc(type, 0);
+    
+    self->value = PyFloat_FromDouble(0.);
+    self->current_value = 0.;
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+	self->modebuffer[2] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, TrigVal_compute_next_data_frame);
+    self->mode_func_ptr = TrigVal_setProcMode;
+    
+    static char *kwlist[] = {"input", "value", "init", "mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, TYPE_O_OFOO, kwlist, &inputtmp, &valuetmp, &self->current_value, &multmp, &addtmp))
+        Py_RETURN_NONE;
+    
+    INIT_INPUT_STREAM
+    
+    if (valuetmp) {
+        PyObject_CallMethod((PyObject *)self, "setValue", "O", valuetmp);
+    }
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+
+    (*self->mode_func_ptr)(self);
+    
+    return (PyObject *)self;
+}
+
+static PyObject * TrigVal_getServer(TrigVal* self) { GET_SERVER };
+static PyObject * TrigVal_getStream(TrigVal* self) { GET_STREAM };
+static PyObject * TrigVal_setMul(TrigVal *self, PyObject *arg) { SET_MUL };	
+static PyObject * TrigVal_setAdd(TrigVal *self, PyObject *arg) { SET_ADD };	
+static PyObject * TrigVal_setSub(TrigVal *self, PyObject *arg) { SET_SUB };	
+static PyObject * TrigVal_setDiv(TrigVal *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * TrigVal_play(TrigVal *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * TrigVal_out(TrigVal *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * TrigVal_stop(TrigVal *self) { STOP };
+
+static PyObject * TrigVal_multiply(TrigVal *self, PyObject *arg) { MULTIPLY };
+static PyObject * TrigVal_inplace_multiply(TrigVal *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * TrigVal_add(TrigVal *self, PyObject *arg) { ADD };
+static PyObject * TrigVal_inplace_add(TrigVal *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * TrigVal_sub(TrigVal *self, PyObject *arg) { SUB };
+static PyObject * TrigVal_inplace_sub(TrigVal *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * TrigVal_div(TrigVal *self, PyObject *arg) { DIV };
+static PyObject * TrigVal_inplace_div(TrigVal *self, PyObject *arg) { INPLACE_DIV };
+
+static PyObject *
+TrigVal_setValue(TrigVal *self, PyObject *arg)
+{
+	PyObject *tmp, *streamtmp;
+	
+	if (arg == NULL) {
+		Py_INCREF(Py_None);
+		return Py_None;
+	}
+    
+	int isNumber = PyNumber_Check(arg);
+	
+	tmp = arg;
+	Py_INCREF(tmp);
+	Py_DECREF(self->value);
+	if (isNumber == 1) {
+		self->value = PyNumber_Float(tmp);
+        self->modebuffer[2] = 0;
+	}
+	else {
+		self->value = tmp;
+        streamtmp = PyObject_CallMethod((PyObject *)self->value, "_getStream", NULL);
+        Py_INCREF(streamtmp);
+        Py_XDECREF(self->value_stream);
+        self->value_stream = (Stream *)streamtmp;
+		self->modebuffer[2] = 1;
+	}
+    
+    (*self->mode_func_ptr)(self);
+    
+	Py_INCREF(Py_None);
+	return Py_None;
+}	
+
+static PyMemberDef TrigVal_members[] = {
+    {"server", T_OBJECT_EX, offsetof(TrigVal, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(TrigVal, stream), 0, "Stream object."},
+    {"input", T_OBJECT_EX, offsetof(TrigVal, input), 0, "Input sound object."},
+    {"value", T_OBJECT_EX, offsetof(TrigVal, value), 0, "Next value."},
+    {"mul", T_OBJECT_EX, offsetof(TrigVal, mul), 0, "Mul factor."},
+    {"add", T_OBJECT_EX, offsetof(TrigVal, add), 0, "Add factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef TrigVal_methods[] = {
+    {"getServer", (PyCFunction)TrigVal_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)TrigVal_getStream, METH_NOARGS, "Returns stream object."},
+    {"play", (PyCFunction)TrigVal_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"out", (PyCFunction)TrigVal_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+    {"stop", (PyCFunction)TrigVal_stop, METH_NOARGS, "Stops computing."},
+    {"setValue", (PyCFunction)TrigVal_setValue, METH_O, "Sets the next value."},
+    {"setMul", (PyCFunction)TrigVal_setMul, METH_O, "Sets oscillator mul factor."},
+    {"setAdd", (PyCFunction)TrigVal_setAdd, METH_O, "Sets oscillator add factor."},
+    {"setSub", (PyCFunction)TrigVal_setSub, METH_O, "Sets inverse add factor."},
+    {"setDiv", (PyCFunction)TrigVal_setDiv, METH_O, "Sets inverse mul factor."},
+    {NULL}  /* Sentinel */
+};
+
+static PyNumberMethods TrigVal_as_number = {
+    (binaryfunc)TrigVal_add,                         /*nb_add*/
+    (binaryfunc)TrigVal_sub,                         /*nb_subtract*/
+    (binaryfunc)TrigVal_multiply,                    /*nb_multiply*/
+    (binaryfunc)TrigVal_div,                                              /*nb_divide*/
+    0,                                              /*nb_remainder*/
+    0,                                              /*nb_divmod*/
+    0,                                              /*nb_power*/
+    0,                                              /*nb_neg*/
+    0,                                              /*nb_pos*/
+    0,                                              /*(unaryfunc)array_abs,*/
+    0,                                              /*nb_nonzero*/
+    0,                                              /*nb_invert*/
+    0,                                              /*nb_lshift*/
+    0,                                              /*nb_rshift*/
+    0,                                              /*nb_and*/
+    0,                                              /*nb_xor*/
+    0,                                              /*nb_or*/
+    0,                                              /*nb_coerce*/
+    0,                                              /*nb_int*/
+    0,                                              /*nb_long*/
+    0,                                              /*nb_float*/
+    0,                                              /*nb_oct*/
+    0,                                              /*nb_hex*/
+    (binaryfunc)TrigVal_inplace_add,                 /*inplace_add*/
+    (binaryfunc)TrigVal_inplace_sub,                 /*inplace_subtract*/
+    (binaryfunc)TrigVal_inplace_multiply,            /*inplace_multiply*/
+    (binaryfunc)TrigVal_inplace_div,                                              /*inplace_divide*/
+    0,                                              /*inplace_remainder*/
+    0,                                              /*inplace_power*/
+    0,                                              /*inplace_lshift*/
+    0,                                              /*inplace_rshift*/
+    0,                                              /*inplace_and*/
+    0,                                              /*inplace_xor*/
+    0,                                              /*inplace_or*/
+    0,                                              /*nb_floor_divide*/
+    0,                                              /*nb_true_divide*/
+    0,                                              /*nb_inplace_floor_divide*/
+    0,                                              /*nb_inplace_true_divide*/
+    0,                                              /* nb_index */
+};
+
+PyTypeObject TrigValType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                                              /*ob_size*/
+    "_pyo.TrigVal_base",                                   /*tp_name*/
+    sizeof(TrigVal),                                 /*tp_basicsize*/
+    0,                                              /*tp_itemsize*/
+    (destructor)TrigVal_dealloc,                     /*tp_dealloc*/
+    0,                                              /*tp_print*/
+    0,                                              /*tp_getattr*/
+    0,                                              /*tp_setattr*/
+    0,                                              /*tp_compare*/
+    0,                                              /*tp_repr*/
+    &TrigVal_as_number,                              /*tp_as_number*/
+    0,                                              /*tp_as_sequence*/
+    0,                                              /*tp_as_mapping*/
+    0,                                              /*tp_hash */
+    0,                                              /*tp_call*/
+    0,                                              /*tp_str*/
+    0,                                              /*tp_getattro*/
+    0,                                              /*tp_setattro*/
+    0,                                              /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "TrigVal objects. Outputs a previously defined value on a trigger signal.",           /* tp_doc */
+    (traverseproc)TrigVal_traverse,                  /* tp_traverse */
+    (inquiry)TrigVal_clear,                          /* tp_clear */
+    0,                                              /* tp_richcompare */
+    0,                                              /* tp_weaklistoffset */
+    0,                                              /* tp_iter */
+    0,                                              /* tp_iternext */
+    TrigVal_methods,                                 /* tp_methods */
+    TrigVal_members,                                 /* tp_members */
+    0,                                              /* tp_getset */
+    0,                                              /* tp_base */
+    0,                                              /* tp_dict */
+    0,                                              /* tp_descr_get */
+    0,                                              /* tp_descr_set */
+    0,                                              /* tp_dictoffset */
+    0,                          /* tp_init */
+    0,                                              /* tp_alloc */
+    TrigVal_new,                                     /* tp_new */
+};
